# cryptoscan-pqc

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
cryptoscan/: __init__.py  cbom.py  cli.py  detectors.py  knowledge.py  report.py  scanner.py
sample_vulnerable_app/: LegacyCrypto.cs  auth.py  nextgen.go  server.conf  tokens.js
tests/: test_cryptoscan.py
