[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoscan-pqc"
version = "0.1.1"
description = "Discover cryptographic assets and emit a CycloneDX CBOM with post-quantum risk classification"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mihir Bommisetty" }]
keywords = ["post-quantum", "cryptography", "CBOM", "CycloneDX", "PQC", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/munnamihir/cryptoscan-pqc"
Repository = "https://github.com/munnamihir/cryptoscan-pqc"
Issues = "https://github.com/munnamihir/cryptoscan-pqc/issues"

[project.scripts]
pqscan = "cryptoscan.cli:main"

[tool.setuptools]
packages = ["cryptoscan"]
